--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,4 +3,11 @@
       max-width: 1240px; 
       margin: auto; 
     }
-}  
+} 
+
+/* Responsive tablet */
+@media screen and (max-width : 991px){
+    .main{
+        padding: 20px;
+    }
+}
