--- a/src/pages/Error/Error.css
+++ b/src/pages/Error/Error.css
@@ -10,7 +10,6 @@ span{
 h2{
     color: #FF6060;
     font-weight: 500;
-    line-height: 51px;
 }
 
 .error-container{
@@ -18,10 +17,21 @@ h2{
     flex-direction: column;
     align-items: center;
     gap: 150px;
-    margin: 300px;
 }
 
 a.error-link{
     font-weight: 500;
     color: BLACK;
+    margin-bottom: 50px;
+}
+
+/* Responsive mobile */
+@media  screen and (max-width : 767px){
+    span{
+        font-size: 150px;
+    }
+
+    .error-container{
+        margin: 0;
+    }
 }
