--- a/src/pages/Error/Error.css
+++ b/src/pages/Error/Error.css
@@ -33,5 +33,10 @@ a.error-link{
 
     .error-container{
         margin: 0;
+        gap: 50px !important;
+    }
+
+    h2{
+        margin: auto !important;
     }
 }
