--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -6,3 +6,10 @@ body{
 main{
   padding: 40px;
 }
+
+/* Responsive mobile */
+@media  screen and (max-width : 767px){
+  main{
+    padding: 10px!important;
+  }
+}
