--- a/src/pages/Error/Error.css
+++ b/src/pages/Error/Error.css
@@ -28,15 +28,23 @@ a.error-link{
 /* Responsive mobile */
 @media  screen and (max-width : 767px){
     span{
-        font-size: 150px;
+        font-size: 100px;
     }
 
     .error-container{
-        margin: 0;
-        gap: 50px !important;
+        height: 70vh; 
+        justify-content: center; 
+        align-items: center; 
+        text-align: center; 
+        margin-bottom: 50px;
+        margin-top: 50px;
     }
 
     h2{
         margin: auto !important;
+    }
+
+    a.error-link {
+        margin-bottom: 0; 
     }
 }
