--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,12 +1,14 @@
 .allcards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px; 
-    padding: 20px;
-    justify-content: center;
-    background-color: #F6F6F6;
-    border-radius: 25px;
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Minimum 250px, maximum 1fr */
+  gap: 20px;
+  padding: 20px;
+  justify-content: center;
+  background-color: #F6F6F6;
+  border-radius: 25px;
+}
+
+
 .card {
    
     border-radius: 10px;
@@ -37,7 +39,11 @@
     height: 200px;
   }
 
-
+  @media (min-width: 1200px) {
+    .allcards {
+        grid-template-columns: repeat(3, 1fr); /* Maximum 3 colonnes sur les écrans larges */
+    }
+  }
   /* Responsive mobile */
   @media  screen and (max-width : 767px) {
     .card span{
